gitops/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ms-template
  name: ms-template
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fast-api
  template:
    metadata:
      labels:
        app: fast-api
    spec:
      containers:
        - image: registry.shakari.no/ms-template:latest
          name: ms-template-latest
          resources: {}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
