gitops/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ms-template
  name: ms-template
spec:
  ports:
    - name: port
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: ms-template
  type: ClusterIP
